# r_libropr

./: .env  .env.example  Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs
src/api/dtos/auth/: auth_dtos.rs  mod.rs
src/api/handlers/: ejemplos_auth.rs  mod.rs
src/api/handlers/auth/: auth_handlers.rs  mod.rs
src/api/handlers/persona/: mod.rs  persona_handlers.rs
src/api/middleware/: auth.rs  auth_middleware.rs  mod.rs
src/api/routes/: auth_router.rs  mod.rs  persona_router.rs
src/config/: database.rs  env.rs  mod.rs
src/core/: mod.rs
src/core/models/: mod.rs  persona.rs
src/core/ports/: mod.rs  persona.rs
src/core/services/: mod.rs
src/core/services/auth/: auth_service.rs  mod.rs
src/core/services/permission/: mod.rs  permission_service.rs
src/core/services/persona/: get_by_email.rs  mod.rs
src/domain/: mod.rs
src/domain/models/: auth.rs  mod.rs  pagina.rs  pagper.rs  perfil.rs  persona.rs
src/domain/ports/: mod.rs
src/domain/ports/cache/: mod.rs
src/domain/ports/db/: mod.rs  pagper_repository.rs  persona.rs
src/errors/: mod.rs
src/infra/: mod.rs
src/infra/adapters/: mod.rs
src/infra/adapters/cache/: auth_cache.rs  mod.rs
src/infra/adapters/db/mysql/: mod.rs  persona_repository.rs
src/infra/adapters/db/postgres/: mod.rs  pagper_repository_pg.rs  persona_repository.rs
src/infra/adapters/mysql/: persona_repository.rs
src/infra/adapters/postgres/: mod.rs  persona_repository.rs
src/utils/: value_parser.rs
