[package]
name = "libropr_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart", "json"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "mysql",
  "macros",
  "uuid",
  "chrono",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42" }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.8", features = [
  "cors",
  "trace",
  "limit",
  "timeout",
] }
tower_governor = { version = "0.8.0" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "fmt",
  "json",
] }
uuid = { version = "1.19.0" }
validator = { version = "0.20.0" }
config = "0.15.19"
bcrypt = "0.17.1"
dotenv = "0.15.0"
serde_json = "1.0.147"
thiserror = "2.0.17"
anyhow = "1.0.100"
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"]}
async-trait = "0.1.80"
